--- a/mongo-sharding/compose.yaml
+++ b/mongo-sharding/compose.yaml
@@ -1,34 +1,9 @@
 name: mongo-sharding
 services:
-  pymongo_api:
-    container_name: pymongo_api
-    build: 
-      context: api_app
-      dockerfile: Dockerfile
-    image: kazhem/pymongo_api:1.0.0
-    depends_on:
-      - mongos_router
-      - configSrv
-      - shard1
-      - shard2
-    ports:
-      - 8080:8080
-    networks:
-      app-network:
-        ipv4_address: 173.17.0.200
-    environment:
-      MONGODB_URL: "mongodb://mongo_router:27020"
-      MONGODB_DATABASE_NAME: "somedb"
-
   configSrv:
     container_name: configSrv 
     image: mongo:latest 
     restart: always
-    ports:
-      - 27017:27017
-    networks:
-      app-network:
-        ipv4_address: 173.17.0.255
     volumes:
       - config-data:/data/db
     command:
@@ -39,48 +14,17 @@ services:
         "config_server",
         "--bind_ip_all",
         "--port",
-        "27017"
+        "27019"
       ] 
     healthcheck:
-      test: [ "CMD", "mongosh", "--eval", "db.adminCommand('ping')", "--port", "27017" ]
+      test: [ "CMD", "mongosh", "--eval", "db.adminCommand('ping')", "--port", "27019" ]
       interval: 5s
       start_period: 10s
-
-  mongos_router:
-    image: mongo:latest
-    container_name: mongos_router
-    restart: always
-    ports:
-      - 27020:27020
-    networks:
-      app-network:
-        ipv4_address: 173.17.0.100
-    command:
-      [
-        "mongos",
-        "--configdb", 
-        "config_server/configSrv:27017",
-        "--bind_ip_all",
-        "--port",
-        "27020"
-      ]
-    healthcheck:
-      test: [ "CMD", "mongosh", "--eval", "db.adminCommand('ping')", "--port", "27020" ]
-      interval: 5s
-      start_period: 10s
-
-
-
 
   shard1:
     image: mongo:latest
     container_name: shard1
     restart: always
-    ports:
-      - 27018:27018
-    networks:
-      app-network:
-        ipv4_address: 173.17.0.101
     volumes:
       - shard1-data:/data/db
     command:
@@ -102,11 +46,6 @@ services:
     image: mongo:latest
     container_name: shard2
     restart: always
-    ports:
-      - 27019:27019
-    networks:
-      app-network:
-        ipv4_address: 173.17.0.102
     volumes:
       - shard2-data:/data/db
     command:
@@ -117,20 +56,47 @@ services:
         "shard2",
         "--bind_ip_all",
         "--port",
-        "27019"
+        "27020"
       ]
     healthcheck:
-      test: [ "CMD", "mongosh", "--eval", "db.adminCommand('ping')", "--port", "27019" ]
+      test: [ "CMD", "mongosh", "--eval", "db.adminCommand('ping')", "--port", "27020" ]
       interval: 5s
       start_period: 10s
 
-networks:
-  app-network:
-    driver: bridge
-    ipam:
-      driver: default
-      config:
-        - subnet: 173.17.0.0/16
+  mongos_router:
+    image: mongo:latest
+    container_name: mongos_router
+    restart: always
+    command:
+      [
+        "mongos",
+        "--configdb", 
+        "config_server/configSrv:27019",
+        "--bind_ip_all",
+        "--port",
+        "27017"
+      ]
+    healthcheck:
+      test: [ "CMD", "mongosh", "--eval", "db.adminCommand('ping')", "--port", "27017" ]
+      interval: 5s
+      start_period: 10s
+
+  pymongo_api:
+    container_name: pymongo_api
+    build: 
+      context: api_app
+      dockerfile: Dockerfile
+    image: kazhem/pymongo_api:1.0.0
+    depends_on:
+      - configSrv
+      - shard1
+      - shard2
+      - mongos_router
+    ports:
+      - 8080:8080
+    environment:
+      MONGODB_URL: "mongodb://mongos_router:27017"
+      MONGODB_DATABASE_NAME: "somedb"
 
 volumes:
   config-data:
